<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_BillAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:padding="@dimen/padding_textView_default"
        android:textStyle="bold"
        android:hint="@string/editText_amountHint"/>

    <TextView
        android:id="@+id/textView_TipSliderAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:background="@color/backgroundBillAmount"
        android:hint="@string/textView_tipSliderText"
        android:padding="@dimen/padding_textView_default"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:gravity="right"
        />

    <SeekBar
        android:id="@+id/SeekBarView"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_column="1"
        android:layout_row="1"
        android:progress="15"
        android:padding="0dp" />

    <TextView
        android:id="@+id/textView_TipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:text="@string/textView_tipText"
        android:background="@color/backgroundBillAmount"
        android:hint="@string/textView_tipText"
        android:labelFor="@+id/editText_BillAmount"
        android:padding="@dimen/padding_textView_default"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:gravity="right"
        />

    <TextView
        android:id="@+id/textView_TipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:text="@string/textView_tipAmount"
        android:background="@color/backgroundBillAmount"
        android:hint="@string/textView_tipAmount"
        android:labelFor="@+id/editText_BillAmount"
        android:padding="@dimen/padding_textView_default"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/textView_TotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:text="@string/textView_totalText"
        android:background="@color/backgroundBillAmount"
        android:hint="@string/textView_totalText"
        android:labelFor="@+id/editText_BillAmount"
        android:padding="@dimen/padding_textView_default"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:gravity="right"
        />

    <TextView
        android:id="@+id/textView_TotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:text="@string/textView_totalAmount"
        android:background="@color/backgroundBillAmount"
        android:labelFor="@+id/editText_BillAmount"
        android:padding="@dimen/padding_textView_default"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:gravity="center"
        />

</GridLayout>